:bug: fixes wrapping in header
closes: #218

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1409,6 +1409,22 @@ input[type=file] {
   width: 200px;
 }
 
+.w-80 {
+  width: 20rem;
+}
+
+.w-60 {
+  width: 15rem;
+}
+
+.w-48 {
+  width: 12rem;
+}
+
+.w-44 {
+  width: 11rem;
+}
+
 .min-w-0 {
   min-width: 0px;
 }
